// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exits with an informative message when there are no patterns provided  1`] = `
{
  "stderr": "
  Expected at least one target file/dir/glob
",
  "stdout": "",
  "write": [],
}
`;

exports[`multiple patterns  1`] = `
{
  "stderr": "",
  "stdout": "directory/file.js
directory/nested-directory/nested-directory-file.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js",
  "write": [],
}
`;

exports[`multiple patterns with a negated pattern  1`] = `
{
  "stderr": "",
  "stdout": "directory/file.js
other-directory/file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns with a negated pattern, doesn't ignore node_modules with the --with-node-modules flag  1`] = `
{
  "stderr": "",
  "stdout": "node_modules/node-module.js
other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns with a negated pattern, ignores node_modules by default  1`] = `
{
  "stderr": "",
  "stdout": "other-directory/file.js
other-directory/nested-directory/nested-directory-file.js
other-regular-modules.js
regular-module.js",
  "write": [],
}
`;

exports[`multiple patterns with an extra non-existent pattern  1`] = `
{
  "stderr": "",
  "stdout": "directory/file.js
directory/nested-directory/nested-directory-file.js",
  "write": [],
}
`;

exports[`multiple patterns, throws an error and exits with a non-zero code when there are no matches  1`] = `
{
  "stderr": "[error] No files matching the given patterns were found.",
  "stdout": "",
  "write": [],
}
`;
